--- a/NPC_FLIP_simulations.Rmd
+++ b/NPC_FLIP_simulations.Rmd
@@ -204,8 +204,9 @@ import map_param_grid
 importlib.reload(map_param_grid)
 ```
 
-```{python id="BhUdzBKH675g"}
+### Run:
 
+```{python id="BhUdzBKH675g"}
 def get_param_range_D_kon(nx, ny):
     param_range= {}
     print(f"nx={nx} ny={ny}")
@@ -218,62 +219,110 @@ def get_param_range_D_kon(nx, ny):
     param_range['range_y']= np.logspace(-3, 0, ny)
     param_range['pretty_y']= r"NTR $k_{on}$ [$sec^{-1}$]"
     return param_range
-    
+
+```
+
+```{python id="Edd4bveu5jph"}
+import multiprocessing
+n_processors= multiprocessing.cpu_count()
+param_range= get_param_range_D_kon(nx= 8, ny= 6)
+stats_grids, ts= map_param_grid.map_param_grid_parallel( param_range,
+                                      equilibration_time_sec= 100.0,
+                                      n_processors= n_processors-2)
+
+```
+
+```{python id="XQvFv3M-NYJN"}
+ts= map_param_grid.get_new_transport_simulation()
+fig, axes= plt.subplots(2,3, figsize=(14, 6.5), sharex=True, sharey=True)
+# N/C
+plt.sca(axes[0,0])
+map_param_grid.plot_NC_ratios(param_range, stats_grids, ts)
+# Bound fraction
+map_param_grid.plot_bound_fraction(param_range, stats_grids, 
+                                   'N', ax=axes[0,1])
+map_param_grid.plot_bound_fraction(param_range, stats_grids, 
+                                   'C', ax=axes[0,2])
+# Import/export
+map_param_grid.plot_import_export(param_range,
+                                  stats_grids,
+                                  axes=[axes[1,0], axes[1,1]])
+plt.sca(axes[1,2])
+ratios_import_export= map_param_grid.get_import_export_ratios(stats_grids)
+map_param_grid.plot_param_grid(param_range, 
+                ratios_import_export,
+                Z_label= 'import:export')
+```
+
+## map traverse
+
+```{python}
+import map_param_grid
+import transport_simulation
+importlib.reload(map_param_grid)
+importlib.reload(transport_simulation)
+
 def get_param_range_traverse_kon(nx, ny):
     param_range= {}
     print(f"nx={nx} ny={ny}")
     epsilon = 1e-9
     c_cargo_M= 50e-6 # TODO: fetch this from the simulation
     param_range['tag_x']= "fraction_complex_NPC_traverse_per_sec"
-    param_range['range_x']= np.logspace(2, 7, nx) # divided by 50E-6 to normalize by the initial cargo concentration # TODO: take the actual cargo concentration?
+    param_range['range_x']= np.logspace(-2, 2, nx) # divided by 50E-6 to normalize by the initial cargo concentration # TODO: take the actual cargo concentration?
+    param_range['pretty_x']= r"rate NPC traverse [$sec^{-1}$]"
     param_range['tag_y']= "rate_free_to_complex_per_sec"
-    param_range['range_y']= np.logspace(-3, 0, ny)
+    param_range['range_y']= np.logspace(-3, 2, ny)
+    param_range['pretty_y']= r"NTR $k_{on}$ [$sec^{-1}$]"
     return param_range
-
 ```
 
-### Run:
+```{python}
+def my_transport_simulation(**kwargs):
+    ts= transport_simulation.TransportSimulation(**kwargs)      
+    ts.set_time_step(1e-3)
+    ts.set_passive_nuclear_molar_rate_per_sec(0.08) #get_passive_export_rate_per_sec(27,1))
+    return ts
+test_ts= my_transport_simulation()
+print(test_ts.max_passive_diffusion_rate_nmol_per_sec_per_M)
+```
 
-```{python id="Edd4bveu5jph"}
+```{python}
+param_range= get_param_range_traverse_kon(nx= 10, ny= 10)
+print(param_range)
 n_processors= multiprocessing.cpu_count()
-param_range= get_param_range_D_kon(nx= 3, ny= 4)
-stats_grids= map_param_grid.map_param_grid_parallel( param_range,
+stats_grids_traverse, ts= map_param_grid.map_param_grid_parallel( param_range,
                                       equilibration_time_sec= 100.0,
-                                      n_processors= n_processors-2)
-
+                                      n_processors= n_processors-2,
+                                                   transport_simulation_generator= my_transport_simulation)
 ```
 
-```{python id="Edd4bveu5jph"}
+```{python}
 importlib.reload(map_param_grid)
-```
-
-```{python id="XQvFv3M-NYJN"}
-plt.figure()
+NC_max= 5.0
+fig, axes= plt.subplots(2,3, figsize=(14, 6.5), sharex=True, sharey=True)
 # N/C
-map_param_grid.plot_NC_ratios(param_range, stats_grids, ts)
+plt.sca(axes[0,0])
+map_param_grid.plot_NC_ratios(param_range, stats_grids_traverse, ts, 
+                              vmax= NC_makx)
 # Bound fraction
-fig, axes= plt.subplots(2,1, figsize=(4.5,9), sharex=True, sharey=True)
-map_param_grid.plot_bound_fraction(param_range, stats_grids, 'N', ax=axes[0])
-map_param_grid.plot_bound_fraction(param_range, stats_grids, 'C', ax=axes[1])
+map_param_grid.plot_bound_fraction(param_range, stats_grids_traverse, 
+                                   'N', ax=axes[0,1])
+map_param_grid.plot_bound_fraction(param_range, stats_grids_traverse, 
+                                   'C', ax=axes[0,2])
 # Import/export
-plot_import_export()
-ratios_import_export= get_import_export_ratios(stats_grids)
-plt.figure()
-plot_param_grid(param_range, 
+map_param_grid.plot_import_export(param_range,
+                                  stats_grids_traverse,
+                                  axes=[axes[1,0], axes[1,1]],
+                               vmin=0.0,
+                               vmax=0.3,
+                levels=np.linspace(0,0.3,16),
+                                 extend='both')
+plt.sca(axes[1,2])
+ratios_import_export= map_param_grid.get_import_export_ratios(stats_grids_traverse)
+map_param_grid.plot_param_grid(param_range, 
                 ratios_import_export,
-                Z_label= 'import:export')
-```
-
-```{python}
-
-```
-
-```{python}
-
-
-
-
-
+                Z_label= 'import:export',
+                              vmax=NC_max)
 ```
 
 # Map NLS strength, MW size, force
@@ -289,13 +338,13 @@ from transport_simulation import TransportSimulation
 import numpy as np
 import transport_simulation
 
-def get_ts_parameters(MW= 27, 
+def get_ts_with_parameters(MW= 27, 
                       NLS_strength= 0, 
                       is_force= False, 
                       **kwargs):
     ts = TransportSimulation(**kwargs)
-    ts.set_passive_export_rate_per_sec(
-        get_passive_export_rate_per_sec(MW, is_force))
+    ts.set_passive_nuclear_molar_rate_per_sec(
+        get_passive_nuclear_molar_rate_per_sec(MW, is_force))
     ts.set_params(rate_free_to_complex_per_sec= 
                   get_free_to_complex_rate(NLS_strength))
     ts.set_params(fraction_complex_NPC_traverse_per_sec=
@@ -304,13 +353,18 @@ def get_ts_parameters(MW= 27,
 
 def get_free_to_complex_rate(NLS_strength):
     rates = [0.0,
-             0.005, #0.07
-             0.025, #2.11
-             0.125  #16.4
+             0.001,
+             0.0025, #0.07
+             0.005,
+             0.01,
+             0.025,
+             0.05, #2.11
+             0.1,  #16.4
+             0.25
             ]
     return rates[NLS_strength]
 
-def get_passive_export_rate_per_sec(MW, is_force):
+def get_passive_nuclear_molar_rate_per_sec(MW, is_force): # TODO: verify it corresponds to multiplyng by concentration rather than nmolecules
     #TODO: generalize this - either from the literature or regression
     base_rates={ 27:0.07624291, 
                 41:0.0560286, 
@@ -332,10 +386,11 @@ def get_force_effect_on_diffusion(MW):
     return effects[MW]
 
 def get_fraction_complex_NPC_traverse_per_sec(MW, is_force):
-    rate= { 27: [0.5e+7,    1.0e+7],
-            41: [0.4e+7,   0.8e+7],
-            54: [0.375e+7, 0.8e+7],
-            67: [0.45e+7,  0.7e+7] }
+    s= 2.5
+    rate= { 27: [s*1.5e-1,  s*3.0e-1],
+            41: [s*1.2e-1,  s*2.4e-1],
+            54: [s*1.15e-1, s*2.4e-1],
+            67: [s*1.3e-1,  s*2.1e-1] }
     i_force= 1 if is_force else 0
     return rate[MW][i_force]
 
@@ -394,27 +449,59 @@ def get_N_C_ratio_stats(ts,
 
 ```{python}
 import matplotlib.pyplot as plt
+import multiprocessing
 
-def plot_MW(MW):
+n_processors= 10
+
+def do_simulate(ts, simulation_time_sec):
+    return ts.simulate(simulation_time_sec)
+
+def get_MW_stats_list_by_force(MW):
     assert(MW in [27,41, 54, 67])
-    plot_from_sec=  0.0 # ts.bleach_start_time_sec + 1.0
-    simulation_time_sec= 100.0
-    fig, ax_grid= plt.subplots(6, 2, figsize=(10,15), sharex=True, sharey='row')
-    ax_grid= ax_grid.transpose()
-    for axes, is_force in zip(ax_grid, [False, True]):
-        for i_NLS in range(4):
-            ts = get_ts_parameters(MW= MW,
+    simulation_time_sec= 75
+    stats_list_by_force= {}
+    TSs_by_force= {}
+    for is_force in [False, True]:
+        TS_tuples= []
+        for i_NLS in range(9):
+            ts = get_ts_with_parameters(MW= MW,
                                     NLS_strength=i_NLS,
                                   is_force= is_force)
-#            print(vars(ts))
             ts.set_params(dt_sec=1e-3)
-    #        ts.bleach_start_time_sec= simulation_time_sec/2.0
-            stats = ts.simulate(simulation_time_sec)
+#            ts.Ran_cell_M= 100e-6 # NOTE
+            ts.fraction_complex_NPC_to_free_N_per_M_GTP_per_sec = 0.1e+6 # TODO: this is doubled relative to complex_N to free_N
+            ts.fraction_complex_N_to_free_N_per_M_GTP_per_sec = 0.1e+6
+#            ts.fraction_complex_NPC_to_complex_N_C_per_sec= 0.1 # NOTE
+            TS_tuples.append((ts, simulation_time_sec))
+        pool= multiprocessing.Pool(processes= n_processors)
+        stats_list_by_force[is_force]= pool.starmap(do_simulate,
+                                                    TS_tuples)
+        TSs_by_force[is_force]= [x[0] for x in TS_tuples]
+        print(f"Is force {is_force} i_NLS {i_NLS}: OK")
+    return (stats_list_by_force, TSs_by_force)
+
+def plot_MW_stats_list(stats_list_by_force, TSs_by_force):
+    plot_from_sec=  0.1 # ts.bleach_start_time_sec + 1.0
+    extras= ['GTP_N',
+            'GDP_N',
+            'GTP_C',
+            'GDP_C',
+            'complexL_C',
+            'freeL_C',
+            'complexL_N',
+            'freeL_N']
+    fig, ax_grid= plt.subplots(7+len(extras), 2, 
+                               figsize=(10,15+3*len(extras)), 
+                               sharex=True, sharey='row')
+    ax_grid= ax_grid.transpose()
+    for axes, is_force in zip(ax_grid, [False, True]):  
+        for i_NLS, stats in enumerate(stats_list_by_force[is_force]):
+            ts= TSs_by_force[is_force][i_NLS]
             labels= ['L', 'U']
             x= stats['time_sec']
             ys={}
-            ys[0]= stats['import_L'] + stats['import_U']
-            ys[1]= stats['export_L'] + stats['export_U']
+            ys[0]= stats['nuclear_importL_per_sec'] + stats['nuclear_importU_per_sec']
+            ys[1]= stats['nuclear_exportL_per_sec'] + stats['nuclear_exportU_per_sec']
             ys[2]= get_N_C_ratio_stats(ts,
                                        stats, 
                                        labels)
@@ -427,32 +514,49 @@ def plot_MW(MW):
                                                       'N', 
                                                       labels)
             ys[5]= ys[3] - ys[4]
+            ys[6]= stats['complexL_NPC_N_import']+stats['complexL_NPC_C_import']+stats['complexL_NPC_N_export']+stats['complexL_NPC_C_export'] \
+                + stats['complexU_NPC_C_import']+stats['complexU_NPC_C_import']+stats['complexU_NPC_N_export']+stats['complexU_NPC_C_export']
+            for iextra, extra in enumerate(extras):
+                ys[7+iextra]= stats[extra]
             plot_from_frame= int(plot_from_sec/ts.dt_sec) 
             for j, ax in enumerate(axes):
                 ax.plot(x[plot_from_frame:], 
                         ys[j][plot_from_frame:],
-                label= ts.rate_free_to_complex_per_sec)
-                ax.set_xlabel(r"time [$sec$]")
-                lh= ax.legend()
-                lh.set_title('NLS_strength')
+                        label= get_free_to_complex_rate(i_NLS))
+                ax.set_xlabel(r"time [$sec$]")           
             axes[0].set_ylabel(r"import rate [$sec^{-1}$]")
             axes[1].set_ylabel(r"export rate [$sec^{-1}$]")
             axes[2].set_ylabel("N/C ratio")
             axes[3].set_ylabel(r"C [$M$]")
             axes[4].set_ylabel(r"N [$M$]")
-            axes[5].set_ylabel(r"C - N [$M$]")
-            #axes[0].set_yscale('log')
-            #axes[1].set_yscale('log')
+            axes[5].set_ylabel(r"$\Delta$(C,N) [$M$]")
+            axes[6].set_ylabel('NPC [nmol]')
+            for iextra, extra in enumerate(extras):
+                axes[7+iextra].set_ylabel(extra)
+                axes[7+iextra].set_yscale('log')
             axes[3].set_yscale('log')
             axes[4].set_yscale('log')
-            axes[5].set_yscale('log')
+            axes[5].set_yscale('symlog', linthreshy=1e-9)
             title= "30 kPa" if is_force else "5 kPa"
             axes[0].set_title(title)
-            print(f"Is force {is_force} i_NLS {i_NLS}: OK")
-            
+    handles, labels = plt.gca().get_legend_handles_labels()
+    lh= fig.legend(handles, labels, loc='center right')
+    lh.set_title('NLS_strength')
+```
+
+```{python}
+MW_to_stats_list_by_force= {}            
 for MW in [27, 41, 54, 67]:
     print(MW)
-    plot_MW(MW)
+    MW_to_stats_list_by_force[MW]= get_MW_stats_list_by_force(MW)
+  
+```
+
+```{python}
+  
+for MW in [27, 41, 54, 67]:
+    print(MW)
+    plot_MW_stats_list(*MW_to_stats_list_by_force[MW])
     plt.show()
 ```
 
@@ -461,10 +565,7 @@ for MW in [27, 41, 54, 67]:
 ```
 
 ```{python}
-plt.plot(stats['complexL_NPC_N_import'] +
-        stats['complexL_NPC_N_export'] +
-        stats['complexL_NPC_C_import'] +
-        stats['complexL_NPC_C_export'])
+
 ```
 
 ```{python}
